# pidgin-steam-cpp

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT_NOTES.md  README.md  read_password.sh
nodejs/: buf.gen.yaml  buf.yaml  package-lock.json  package.json  tsconfig.json
nodejs/src/: basic_chat.ts  client.ts  protobufs_src  server.ts
protobufs_src/comm_protobufs/: auth.proto  message.proto
src/: coro_utils.h  environ.cpp  environ.h  grpc_client_wrapper.cpp  grpc_client_wrapper.h  grpc_client_wrapper_async.cpp  grpc_client_wrapper_async.h  grpc_exp.cpp  grpc_exp.h  ipc_pipe.h  libdummy.cpp  libdummy.h
